--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("https://wallpaperaccess.com/full/208106.jpg");
+  /* background-image: url("https://wallpaperaccess.com/full/208106.jpg"); */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#headerBG {
+  background-image: url("https://wallpaperaccess.com/full/208106.jpg");
 }
